stop status lozenge wrapping onto next line between l and xl breakpoints

--- a/ds_caselaw_editor_ui/sass/includes/_metadata.scss
+++ b/ds_caselaw_editor_ui/sass/includes/_metadata.scss
@@ -96,6 +96,7 @@
       border: 3px solid white;
     }
     margin-bottom: calc($spacer__unit / 2);
+    white-space: nowrap;
   }
 
   &__main-labels {
